--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  overflow: hidden;
 }
 
 .header {
@@ -14,6 +13,8 @@ body {
 }
 
 #canvas {
+  margin: 0;
+  padding: 0;
   z-index: 100;
   border: 1px solid black;
 }
